[tool.poetry]
name = "dcmlpkg"
version = "0.1.2b"
description = "My packages to use for Data Science Projects"
authors = ["dcgkpindiadatascience <dcgkpindiadatascience@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
